修改大量错误，并尝试绘制一个圆

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,6 +11,16 @@
 			"group": "build",
 			"problemMatcher": [],
 			"detail": "CMake build",
+			"dependsOn": [
+				"configure"
+			]
+		},
+		{
+			"type": "cmake",
+			"label": "Configure",
+			"command": "configure",
+			"problemMatcher": [],
+			"detail": "CMake configure"
 		}
 	]
 }
