修改项目结构，添加一些三维数据结构

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,8 @@ project(Renderer)
 
 set(CMAKE_CXX_STANDARD 17)
 
-include_directories(src)
-file(GLOB SOURCE_FILES "src/*.cc")
+include_directories(src/lib)
+file(GLOB SOURCE_FILES "src/lib/*.cc")
 
-add_executable(${PROJECT_NAME} WIN32 ${SOURCE_FILES})
+add_executable(${PROJECT_NAME} WIN32 ${SOURCE_FILES} src/exe/main.cc)
+add_executable(${PROJECT_NAME}_test ${SOURCE_FILES} src/test/main.cc)
