--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,22 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "(Windows) 启动",
+            "name": "Exe",
             "type": "cppvsdbg",
             "request": "launch",
             "program": "${workspaceRoot}/build/Debug/Renderer.exe",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceRoot}",
+            "environment": [],
+            "console": "internalConsole",
+            "preLaunchTask": "Build"
+        },
+        {
+            "name": "Test",
+            "type": "cppvsdbg",
+            "request": "launch",
+            "program": "${workspaceRoot}/build/Debug/Renderer_test.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceRoot}",
