添加大量创建Matrix3的函数

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,7 +12,7 @@
 			"problemMatcher": [],
 			"detail": "CMake build",
 			"dependsOn": [
-				"configure"
+				"Configure"
 			]
 		},
 		{
@@ -21,6 +21,6 @@
 			"command": "configure",
 			"problemMatcher": [],
 			"detail": "CMake configure"
-		}
+		},
 	]
 }
